# ros2_canbus_control

./: .gitignore  ROS2_USB_CAN_Package_Design.md  USB_CAN_A_Analysis.md  USB_CAN_Bridge_Test_Jazzy.md  USB_CAN_Implementation_Discussion.md  USB_CAN_ros2_canopen_Integration.md  build_ws.sh  crtp_adapter_frame_reference.hpp  diagram.drawio  fix_usb_permissions.sh  setup_x11_devcontainer.sh  uncrustify.cfg
.devcontainer/: Dockerfile.base  Dockerfile.full  README.md  devcontainer.json
.devcontainer/intel-gpu/: compose.yaml  devcontainer.json
.devcontainer/nvidia-gpu/: compose.yaml  devcontainer.json
.github/: copilot-instructions.md
comp/: README_SPLIT_HEADERS.md  STRUCT_VS_CLASS_COMPARISON.md  USB_CAN_REFACTORING_GUIDE.md  a.out  class_usage_example.cpp  frame_factory.hpp  test_headers.sh  usb_can_common.hpp  usb_can_example  usb_can_frame.cpp  usb_can_frame.hpp  usb_can_frame_class_version.hpp  usb_can_frame_example  usb_can_serialization_demo.cpp  usb_can_usage_example.cpp  variable_size_frame.hpp
comp/tests/: CMakeLists.txt  test_fixed_variable_frames.cpp
config/: aliases.sh  vimrc
docker/: Dockerfile  compose.yaml
misc/: chatgpt.cpp
misc/USB-CAN-A/: README.md  canusb.c
scripts/: attach_terminal.sh  build_ws.sh  configure_zsh.sh  install_ble.sh  install_fzf.sh  install_gazebo.sh  install_gh_cli.sh  install_integration_conf.sh  install_starship.sh  install_zoxide.sh  run_container.sh  setup_ros2_environment.sh  start_container.sh
src/microphase_can_config/: CMakeLists.txt  package.xml
src/microphase_can_config/config/bus_config/: TRACTION_PWR.eds  TRACTION_PWR_table.md  bus.yml
src/microphase_can_config/launch/: microphase_can_config.launch.py
src/ros2_waveshare/: CMakeLists.txt  CMakeLists_updated.txt  package.xml
src/ros2_waveshare/frames/: README.md
src/ros2_waveshare/include/ros2_waveshare/: adapter_base_frame.hpp  base_frame.hpp  common.hpp  error.hpp  fixed_frame.hpp  fixed_size_frame.hpp  frame_builder.hpp  frame_factory.hpp  main.cpp  settings_frame.hpp  usb_can_common.hpp  usb_can_driver.hpp  usb_can_frame.hpp  usb_can_frame_builder.hpp  usb_can_frame_factory.hpp  usb_can_frames.hpp  var_frame.hpp  variable_size_frame.hpp  vibecode.cpp
src/ros2_waveshare/include/ros2_waveshare/frames/: usb_can_frame_20byte.hpp  usb_can_frame_base.hpp  usb_can_frame_variable.hpp
src/ros2_waveshare/src/: fixed_frame.cpp  fixed_size_frame.cpp  frame_builder.cpp  frame_factory.cpp  main.cpp  settings_frame.cpp  usb_can_driver.cpp  usb_can_frame.cpp  variable_size_frame.cpp
src/speed_control/: CMakeLists.txt  README.md  package.xml
src/speed_control/config/: speed_control_parameters.yaml
src/speed_control/include/: frameManager.hpp  readStatusWord.hpp  tools.hpp
src/speed_control/include/speed_control/: speed_control.hpp
src/speed_control/log/: latest_list
src/speed_control/src/: frameManager.cpp  mapPDO.cpp  noiseGenerator.cpp  readStatusWord.cpp  sendSDO.cpp  speed_control.cpp  tools.cpp
src/usb_can_bridge_test/: CMakeLists.txt  README.md  package.xml
src/usb_can_bridge_test/config/: test_bus_config.yml
src/usb_can_bridge_test/include/usb_can_bridge_test/: usb_can_driver.hpp
src/usb_can_bridge_test/launch/: complete_test.launch.py  simple_test.launch.py
src/usb_can_bridge_test/scripts/: test_usb_can_bridge.py
src/usb_can_bridge_test/src/: can_frame_publisher.cpp  can_frame_subscriber.cpp  turtle_bridge.cpp  usb_can_driver.cpp  usb_can_socketcan_bridge.cpp  virtual_motor_simulator.cpp
waveshare_cpp/: classDiagram.mmd  main  main.cpp
waveshare_cpp/include/: base_frame.hpp  common.hpp  config_frame.hpp  error.hpp  fixed_frame.hpp  frame_traits.hpp  result.hpp  variable_frame.hpp
waveshare_cpp/src/: config_frame.cpp  fixed_frame.cpp  variable_frame.cpp
